Refactor UserService to use constants for messages